# GeoVeil

./: .geoavil-build-trigger  .gitignore  GeoAvil-patched-app.apk  README.md  geoavil.patch
.github/workflows/: build-geoavil.yml  build-release.yml  build.yml  fix-location-result-factory.yml  fix-system-server-dex-loading.yml  source-guard.yml
app/src/main/java/com/github/fakegps/: IJoyStickPresenter.java  JoyStickManager.java  LocationThread.java  RootBridge.java
app/src/main/java/com/github/fakegps/ui/: AnalogJoystickView.java  JoyStickView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  joystick_layout.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
docs/: ARCHITECTURE.md  FULL_RC2_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MANAGER.md  ROADMAP.md
manager/: README.md  build-manager.sh
manager/src/main/: AndroidManifest.xml
manager/src/main/java/dev/retrofrost/geoveil/engine/: DeliveryHook.java
manager/src/main/java/dev/retrofrost/geoveil/manager/: BridgeClient.java  DraftStore.java  EasyLocationController.java  GeoState.java  GeoVeilApplication.java  GeoVeilEntry.java  JoystickView.java  MainActivity.java  ManagerScreen.java  MovementPanel.java  NativeBridge.java  OverlayEntry.java  RemoteState.java  RootBridge.java
manager/src/main/java/dev/retrofrost/geoveil/xposed/: GeoVeilModule.java  JoystickOverlay.java
manager/src/main/res/drawable/: ic_geoveil.xml
manager/src/main/res/values/: styles.xml
module/: action.sh  cleanup-legacy.sh  customize.sh  module.prop  service.sh  skip_mount  uninstall.sh
native/: CMakeLists.txt
native/src/main/cpp/: bridge.cpp  bridge.hpp  companion.cpp  control.cpp  control_protocol.hpp  engine.cpp  engine.hpp  ipc.hpp  module.cpp  state.hpp  state_bridge.cpp  state_bridge.hpp
scripts/: fetch-hook-deps.sh  fetch-zygisk-header.sh  source-guard.sh
